--- a/.github/workflows/ts_tests.yml
+++ b/.github/workflows/ts_tests.yml
@@ -77,6 +77,7 @@ jobs:
         working-directory: ${{ matrix.package_dir }}
     env:
       ELECTRIC_IMAGE: ${{ needs.ensure_sync_service_image.outputs.image_ref }}
+      DIGEST: ${{ needs.ensure_sync_service_image.outputs.digest }}
     steps:
       - uses: actions/checkout@v4
 
