--- a/.github/workflows/sync_service_public_docker_image.yml
+++ b/.github/workflows/sync_service_public_docker_image.yml
@@ -1,41 +1,38 @@
-name: Publish Electric to Docker Hub
+name: Publish Electric canary image to Docker Hub
 
 on:
-  release:
-    released:
   push:
     # TMP for testing
     # branches: ['main']
     branches: ['alco/ci-build-public-docker-images']
-    # paths:
-    #   - 'packages/electric-telemetry/**'
-    #   - 'packages/sync-service/**'
-
-permissions:
-  contents: read
-  packages: write
 
 jobs:
-  ensure_sync_service_image:
-    uses: ./.github/workflows/ensure_sync_service_image.yml
-    with:
-      platforms: linux/amd64,linux/arm64/v8
-
   build_and_publish_canary_image:
-    if: ${{ github.event_name == 'push' }}
-    needs: [ensure_sync_service_image]
     runs-on: ubuntu-latest
     steps:
-      - uses: docker/setup-buildx-action@v3
+      - uses: actions/checkout@v4
+        with:
+          # It is crucial that we checkout the actual HEAD commit of the branch instead of
+          # GitHub's ephemeral merge commit that it creates for CI runs by default.
+          # We rely on the correct HEAD commit to be checked out in order to determine the
+          # correct ELECTRIC_VERSION to bake into the Docker image.
+          ref: ${{ github.event.pull_request.head.sha }}
+          # Also important to fetch the whole history since otherwise we won't get that tags
+          # that are required to determine the correct ELECTRIC_VERSION.
+          fetch-depth: 0
+          fetch-tags: true
 
-      # # Login to GHCR so we can read/pull the source image if it's private.
-      # # For public GHCR images, this is optional but harmless.
-      # - name: Log in to GHCR
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Determine SHORT_COMMIT_SHA and ELECTRIC_VERSION to use in the build step
+        run: |
+          echo "SHORT_COMMIT_SHA=$(
+            git log -1 --format='%h'
+          )" >> $GITHUB_ENV
+
+          echo "ELECTRIC_VERSION=$(
+            git describe --abbrev=7 --tags --always --first-parent --match '@core/sync-service@*' | sed -En 's|^@core/sync-service@||p'
+          )" >> $GITHUB_ENV
+
+      - uses: docker/setup-buildx-action@v3
 
       # Login to Docker Hub (create a token in Docker Hub, store as secret).
       #- name: Log in to Docker Hub
@@ -46,22 +43,18 @@ jobs:
       #    password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Publish to electricsql/electric:canary and electricsql/electric-canary
-        run: |
-          set -euo pipefail
-
-          echo ${{ needs.ensure_sync_service_image.outputs.digest }}
-
-          # Source is referenced by digest (immutable)
-          SRC_IMAGE="${{ needs.ensure_sync_service_image.outputs.image }}"
-          SRC_DIGEST="${{ needs.ensure_sync_service_image.outputs.digest }}"
-          SRC_REF="${SRC_IMAGE}@${SRC_DIGEST}"
-
-          TARGETS=(
-            "docker.io/electricsql/electric:canary"
-            "docker.io/electricsql/electric-canary:latest"
-            "docker.io/electricsql/electric-canary:${{ needs.ensure_sync_service_image.outputs.tag }}"
-          )
-
-          for t in "${TARGETS[@]}"; do
-            echo docker buildx imagetools create --tag "$t" "$SRC_REF"
-          done
+        uses: docker/build-push-action@v6
+        with:
+          context: packages/sync-service
+          build-contexts: |
+            electric-telemetry=packages/electric-telemetry
+          build-args: |
+            ELECTRIC_VERSION=${{ env.ELECTRIC_VERSION }}
+          platforms: linux/amd64,linux/arm64/v8
+          push: true
+          tags: |
+            electricsql/electric:canary
+            electricsql/electric-canary:${{ env.SHORT_COMMIT_SHA }}
+            electricsql/electric-canary:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
