--- a/examples/tanstack-db-web-starter/.env.example
+++ b/examples/tanstack-db-web-starter/.env.example
@@ -8,7 +8,10 @@ BETTER_AUTH_SECRET=
 
 # Electric Cloud Configuration (optional)
 # Get these from https://dashboard.electric-sql.cloud/
-# or use `npx @electric-sql/start` to provision automatically
+# or use `npx @electric-sql/start` to provision automatically.
+# If not set, it will try to connect to local Electric at `http://localhost:30000`
+# and you can start it using `pnpm backend:up`
+#
 # ELECTRIC_URL=https://api.electric-sql.cloud
 # ELECTRIC_SOURCE_ID=your-source-id
 # ELECTRIC_SECRET=your-source-secret
