feat: add `@electric-sql/start` package that interacts with Cloud (#3595)
Co-authored-by: Ilia Borovitinov <ilia@electric-sql.com>

--- a/examples/tanstack-db-web-starter/.env.example
+++ b/examples/tanstack-db-web-starter/.env.example
@@ -6,7 +6,12 @@ DATABASE_URL=postgresql://postgres:password@localhost:54321/electric
 # Generate a strong secret (minimum 32 characters)
 BETTER_AUTH_SECRET=
 
-# Production Electric Cloud Configuration (optional)
+# Electric Cloud Configuration (optional)
 # Get these from https://dashboard.electric-sql.cloud/
+# or use `npx @electric-sql/start` to provision automatically.
+# If not set, it will try to connect to local Electric at `http://localhost:30000`
+# and you can start it using `pnpm backend:up`
+#
+# ELECTRIC_URL=https://api.electric-sql.cloud
 # ELECTRIC_SOURCE_ID=your-source-id
-# ELECTRIC_SOURCE_SECRET=your-source-secret
+# ELECTRIC_SECRET=your-source-secret
