TMP test the CI workflow on the PR branch

--- a/.github/workflows/sync_service_dockerhub_image.yml
+++ b/.github/workflows/sync_service_dockerhub_image.yml
@@ -4,7 +4,7 @@ name: Publish Electric images to Docker Hub
 # conditional logic in the derive_build_vars and publish_tagged_image jobs.
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'alco/ci-dockerhub-release-fixup']
   release:
     types: [released]
   workflow_dispatch:
