--- a/.github/workflows/sync_service_dockerhub_image.yml
+++ b/.github/workflows/sync_service_dockerhub_image.yml
@@ -14,6 +14,10 @@ on:
         required: true
         type: string
 
+env:
+  DOCKERHUB_REPO: electricsql/electric
+  DOCKERHUB_CANARY_REPO: electricsql/electric-canary
+
 jobs:
   derive_build_vars:
     name: Derive build variables from the source code
@@ -116,8 +120,8 @@ jobs:
           # the subsequent merge job will assemble the manifest list and apply tags
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
           tags: |
-            electricsql/electric
-            electricsql/electric-canary
+            ${{ env.DOCKERHUB_REPO }}
+            ${{ env.DOCKERHUB_CANARY_REPO }}
 
       # Save the digest so the merge job can find both platform images
       - name: Export digest
@@ -151,36 +155,36 @@ jobs:
         run: |
           if [ "${{ needs.derive_build_vars.outputs.is_release }}" = "true" ]; then
             # A release triggers official release image publishing
-            echo "ELECTRIC_TAGS=-t electricsql/electric:latest -t electricsql/electric:${{ needs.derive_build_vars.outputs.electric_version }}" >> $GITHUB_ENV
+            echo "ELECTRIC_TAGS=-t $DOCKERHUB_REPO:latest -t $DOCKERHUB_REPO:${{ needs.derive_build_vars.outputs.electric_version }}" >> $GITHUB_ENV
             echo "ELECTRIC_CANARY_TAGS=" >> $GITHUB_ENV
           else
             # A regular push to the main branch triggers canary image publishing
-            echo "ELECTRIC_TAGS=-t electricsql/electric:canary" >> $GITHUB_ENV
-            echo "ELECTRIC_CANARY_TAGS=-t electricsql/electric-canary:latest -t electricsql/electric-canary:${{ needs.derive_build_vars.outputs.short_commit_sha }}" >> $GITHUB_ENV
+            echo "ELECTRIC_TAGS=-t $DOCKERHUB_REPO:canary" >> $GITHUB_ENV
+            echo "ELECTRIC_CANARY_TAGS=-t $DOCKERHUB_CANARY_REPO:latest -t $DOCKERHUB_CANARY_REPO:${{ needs.derive_build_vars.outputs.short_commit_sha }}" >> $GITHUB_ENV
           fi
 
       - name: Create multi-arch manifest list
         run: |
           set -euo pipefail
 
-          # Build a list of electricsql/electric@sha256:... source images
+          # Build a list of $DOCKERHUB_REPO@sha256:... source images
           ELECTRIC_IMAGES=$(
             for f in /tmp/digests/*.digest; do
-              echo electricsql/electric@$(cat $f)
+              echo $DOCKERHUB_REPO@$(cat $f)
             done
           )
 
-          # Create a manifest list for electricsql/electric:canary that includes both platforms
+          # Create a manifest list for $DOCKERHUB_REPO:canary that includes both platforms
           docker buildx imagetools create $ELECTRIC_TAGS $ELECTRIC_IMAGES
 
           if [ -n "$ELECTRIC_CANARY_TAGS" ]; then
-            # Build a list of electricsql/electric-canary@sha256:... source images
+            # Build a list of $DOCKERHUB_CANARY_REPO@sha256:... source images
             ELECTRIC_CANARY_IMAGES=$(
               for f in /tmp/digests/*.digest; do
-                echo electricsql/electric-canary@$(cat $f)
+                echo $DOCKERHUB_CANARY_REPO@$(cat $f)
               done
             )
 
-            # Create a manifest list for electricsql/electric-canary:... that includes both platforms
+            # Create a manifest list for $DOCKERHUB_CANARY_REPO:... that includes both platforms
             docker buildx imagetools create $ELECTRIC_CANARY_TAGS $ELECTRIC_CANARY_IMAGES
           fi
