Fix workflow syntax

--- a/.github/workflows/sync_service_dockerhub_image.yml
+++ b/.github/workflows/sync_service_dockerhub_image.yml
@@ -95,7 +95,8 @@ jobs:
     needs: [derive_build_vars]
     steps:
       - uses: actions/checkout@v4
-        ref: ${{ needs.derive_build_vars.outputs.git_ref }}
+        with:
+          ref: ${{ needs.derive_build_vars.outputs.git_ref }}
 
       - uses: useblacksmith/setup-docker-builder@v1
 
