Revert "TMP test the CI workflow on the PR branch"
This reverts commit 04cf2cf7314c51cba60e9bfe4503d1287104401b.

--- a/.github/workflows/sync_service_dockerhub_image.yml
+++ b/.github/workflows/sync_service_dockerhub_image.yml
@@ -4,7 +4,7 @@ name: Publish Electric images to Docker Hub
 # conditional logic based on ${{ github.event_name }} in the derive_build_vars job.
 on:
   push:
-    branches: ['main', 'alco/ci-dockerhub-release-fixup']
+    branches: ['main']
   release:
     types: [released]
   workflow_dispatch:
