--- a/.github/workflows/sync_service_dockerhub_image.yml
+++ b/.github/workflows/sync_service_dockerhub_image.yml
@@ -15,8 +15,8 @@ on:
         type: string
 
 env:
-  DOCKERHUB_REPO: alco/electric
-  DOCKERHUB_CANARY_REPO: alco/electric-canary
+  DOCKERHUB_REPO: electricsql/electric
+  DOCKERHUB_CANARY_REPO: electricsql/electric-canary
 
 jobs:
   derive_build_vars:
@@ -103,8 +103,8 @@ jobs:
       - uses: docker/login-action@v3
         with:
           registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME_ALCO }}
-          password: ${{ secrets.DOCKERHUB_TOKEN_ALCO }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push by digest
         id: build
@@ -141,8 +141,8 @@ jobs:
     steps:
       - uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME_ALCO }}
-          password: ${{ secrets.DOCKERHUB_TOKEN_ALCO }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - uses: useblacksmith/setup-docker-builder@v1
 
