--- a/.github/workflows/sync_service_tests.yml
+++ b/.github/workflows/sync_service_tests.yml
@@ -63,6 +63,7 @@ jobs:
         run: psql -d postgresql://postgres:password@localhost:54321/postgres?sslmode=disable -f dev/init.sql
 
       - uses: erlef/setup-beam@v1
+        id: setup-beam
         with:
           version-type: strict
           version-file: '.tool-versions'
@@ -71,11 +72,11 @@ jobs:
         uses: actions/cache@v4
         with:
           path: packages/sync-service/deps
-          key: "${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
+          key: "${{ runner.os }}-sync-service-deps-${{ steps.setup-beam.outputs.elixir-version }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
           restore-keys: |
-            ${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}
-            ${{ runner.os }}-sync-service-deps
+            ${{ runner.os }}-sync-service-deps-${{ steps.setup-beam.outputs.elixir-version }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
+            ${{ runner.os }}-sync-service-deps-${{ steps.setup-beam.outputs.elixir-version }}-${{ env.MIX_ENV }}
+            ${{ runner.os }}-sync-service-deps-${{ steps.setup-beam.outputs.elixir-version }}
 
       - name: Cache compiled code
         uses: actions/cache@v4
@@ -84,11 +85,11 @@ jobs:
             packages/sync-service/_build/*/lib
             !packages/sync-service/_build/*/lib/electric
             !packages/sync-service/_build/*/lib/electric_telemetry
-          key: "${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
+          key: "${{ runner.os }}-sync-service-build-${{ steps.setup-beam.outputs.elixir-version }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
           restore-keys: |
-            ${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}
-            ${{ runner.os }}-sync-service-build
+            ${{ runner.os }}-sync-service-build-${{ steps.setup-beam.outputs.elixir-version }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
+            ${{ runner.os }}-sync-service-build-${{ steps.setup-beam.outputs.elixir-version }}-${{ env.MIX_ENV }}
+            ${{ runner.os }}-sync-service-build-${{ steps.setup-beam.outputs.elixir-version }}
 
       - name: Install dependencies
         run: mix do deps.get + deps.compile
