Fix missed issues

--- a/.github/workflows/changesets_release.yml
+++ b/.github/workflows/changesets_release.yml
@@ -68,7 +68,7 @@ jobs:
     if: ${{ needs.changesets.outputs.published == 'true' && needs.changesets.outputs.sync_service_release_tag  != '' }}
     uses: ./.github/workflows/sync_service_dockerhub_image.yml
     secrets: inherit
-    inputs:
+    with:
       release_tag: ${{ needs.changesets.outputs.sync_service_release_tag }}
 
   update-cloud:
